# cm24-projects

./: .env  .env.example  .gitignore  .gitmodules  Dockerfile  PoS.md  README.md  README_template.md  docker-compose.yml  php.ini  zklings.md
AI Training Data Selling with Privacy Protection (for client)/: README.md
CNX-DonationBoard/: README.md
Circom-tfhe-rs/: Readme.md
Dive_Deep_Into_CircleStarks/: README.md
EVM-Telegram-ZK /: README.md
Gardens/: README.md
HaaS-Hook/: README.md
Ivan ZKML R&D/: README.md
Kalki/: README.md
LuckyStar/: README.md
PSI_ridepooling_matching/: README.md
PoS/: README.md
PrivacyVisa/: README.md
STIR_Research/: README.md
Voizk R&D/: README.md
ZKLP/: README.md
ZKPL/: README.md
ZKResearch/: README.md
abstract_algebra_manual/: README.md
according.work/: README.md
apstark/: README.md
bank/: cardVerification.circom  index.js  package-lock.json  package.json  removefiles.sh
blockchain-from-scratch/: README.md
cute-kzg-icicle/: Cargo.toml  README.md
cute-kzg-icicle/src/: kzg.rs  lib.rs  setup.rs  utils.rs
fl_ezkl/: README.md  calibration.json  input.json  main.py  model.py  network.compiled  network.onnx  new_transaction_data.csv  (+5 more)
zkCX/zkcx/: .gitignore  Cargo.toml  readme.md
zkCX/zkcx/certificates/: certificate.der  certificate.pem
zkCX/zkcx/src/: certificate.rs  grothproof.rs  hashCert.rs  main.rs  proofCache.rs  zk_proof.rs
zkCX/zkcx/verifier_contract/contracts/: CertificateRegistry.sol
zkCX/zkcx/verifier_contract/scripts/: deploy.js
zkCX/zkcx/verifier_contract/test/: CertificateRegistry.js
(+69 files in other folders)
