[package]
name = "cute-kzg-icicle"
version = "0.1.0"
edition = "2021"

[dependencies]
icicle-cuda-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v2.8.0" }
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v2.8.0", features = ["arkworks"] }
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v2.8.0", features = ["arkworks", "g2"] }
ark-std = "0.4"
rand = "0.8.5"
thiserror = "1.0"

[features]
default = ["g2"]
g2 = []
