[package]
name = "zkcx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x509-cert = "0.2.5"          # x509-cert RustCrypto
ark-groth16 = "0.5.0"        # Groth16 proof system
ark-ff = "0.5.0"             # Field and finite field arithmetic
ark-bn254 = "0.5.0"          # BN254 curve (popular in ZKP)
ark-relations = "0.5.1"      # Circuit constraints and relations
sha2 = "0.10"